✨ Allow document sharing
