# backend/transcribee_backend/routers/document.py
@@ -1,3 +1,4 @@
+import datetime
 import uuid
 from pathlib import Path
 from typing import List, Optional
@@ -8,6 +9,7 @@ from fastapi import (
     Depends,
     File,
     Form,
+    Header,
     HTTPException,
     Query,
     UploadFile,
@@ -23,7 +25,9 @@ from sqlmodel import Session, col, select
 from transcribee_proto.api import Document as ApiDocument
 
 from transcribee_backend.auth import (
+    generate_share_token,
     get_authorized_worker,
+    validate_share_authorization,
     validate_user_authorization,
     validate_worker_authorization,
 )
@@ -31,6 +35,7 @@ from transcribee_backend.config import get_model_config, settings
 from transcribee_backend.db import get_session
 from transcribee_backend.helpers.sync import DocumentSyncConsumer
 from transcribee_backend.helpers.time import now_tz_aware
+from transcribee_backend.models import DocumentShareToken, DocumentShareTokenResponse
 from transcribee_backend.models.task import TaskAttempt, TaskResponse
 
 from .. import media_storage
@@ -51,14 +56,49 @@ document_router = APIRouter()
 def get_document_from_url(
     document_id: uuid.UUID,
     session: Session = Depends(get_session),
-    token: UserToken = Depends(get_user_token),
+    authorization: str = Header(),
 ) -> Document:
     """
     Get the current document from the `document_id` url parameter, ensuring that the authorized user
-    is allowed to access the document.
+    is allowed to access the document or a share token for the document is present.
     """
+    try:
+        user_token = validate_user_authorization(session, authorization)
+    except HTTPException:
+        user_token = None
+
+    try:
+        share_token = validate_share_authorization(session, authorization)
+    except HTTPException:
+        share_token = None
+
+    if share_token is not None:
+        auth_filter = Document.id == share_token.document_id
+    elif user_token is not None:
+        auth_filter = Document.user_id == user_token.user_id
+    else:
+        raise HTTPException(status_code=403)
+
+    statement = select(Document).where(Document.id == document_id, auth_filter)
+    doc = session.exec(statement).one_or_none()
+    if doc is not None:
+        return doc
+    else:
+        raise HTTPException(status_code=404)
+
+
+def get_owned_document_from_url(
+    document_id: uuid.UUID,
+    session: Session = Depends(get_session),
+    authorization: str = Header(),
+) -> Document:
+    """
+    Get the current document from the `document_id` url parameter, ensuring that the authorized user
+    is allowed to access the document or a share token for the document is present.
+    """
+    user_token = validate_user_authorization(session, authorization)
     statement = select(Document).where(
-        Document.id == document_id, Document.user_id == token.user_id
+        Document.id == document_id, Document.user_id == user_token.user_id
     )
     doc = session.exec(statement).one_or_none()
     if doc is not None:
@@ -91,6 +131,11 @@ def ws_get_document_from_url(
     except HTTPException:
         worker = None
 
+    try:
+        share_token = validate_share_authorization(session, authorization)
+    except HTTPException:
+        share_token = None
+
     if user_token is not None and user_token.user_id == document.user_id:
         return document
     if worker is not None:
@@ -100,6 +145,8 @@ def ws_get_document_from_url(
         )
         if session.exec(statement.limit(1)).one_or_none() is not None:
             return document
+    if share_token is not None and document.id == share_token.document_id:
+        return document
     raise WebSocketException(code=status.WS_1008_POLICY_VIOLATION)
 
 
@@ -213,7 +260,6 @@ def list_documents(
 
 @document_router.get("/{document_id}/")
 def get_document(
-    token: UserToken = Depends(get_user_token),
     document: Document = Depends(get_document_from_url),
 ) -> ApiDocument:
     return document.as_api_document()
@@ -221,8 +267,7 @@ def get_document(
 
 @document_router.delete("/{document_id}/")
 def delete_document(
-    token: UserToken = Depends(get_user_token),
-    document: Document = Depends(get_document_from_url),
+    document: Document = Depends(get_owned_document_from_url),
     session: Session = Depends(get_session),
 ) -> None:
     paths_to_delete: List[Path] = []
@@ -247,7 +292,6 @@ def delete_document(
 
 @document_router.get("/{document_id}/tasks/")
 def get_document_tasks(
-    token: UserToken = Depends(get_user_token),
     document: Document = Depends(get_document_from_url),
     session: Session = Depends(get_session),
 ) -> List[TaskResponse]:
@@ -276,7 +320,8 @@ def add_media_file(
     authorized_worker: Worker = Depends(get_authorized_worker),
 ) -> ApiDocument:
     statement = select(Task).where(
-        Task.document_id == document_id, Task.task_type == TaskType.REENCODE
+        Task.document_id == document_id,
+        Task.task_type == TaskType.REENCODE,
     )
     task = session.exec(statement).one_or_none()
     if (
@@ -319,7 +364,8 @@ def set_duration(
     authorized_worker: Worker = Depends(get_authorized_worker),
 ) -> ApiDocument:
     statement = select(Task).where(
-        Task.document_id == document_id, Task.task_type == TaskType.REENCODE
+        Task.document_id == document_id,
+        Task.task_type == TaskType.REENCODE,
     )
     task = session.exec(statement).one_or_none()
     if (
@@ -354,3 +400,63 @@ def update_document(
     session.commit()
 
     return document.as_api_document()
+
+
+class ShareDocumentResponse(BaseModel):
+    share_token: str
+
+
+class CreateShareToken(BaseModel):
+    name: str
+    valid_until: Optional[datetime.datetime]
+
+
+@document_router.post("/{document_id}/share_tokens/")
+def share(
+    body: CreateShareToken,
+    session: Session = Depends(get_session),
+    token: UserToken = Depends(get_user_token),
+    document: Document = Depends(get_owned_document_from_url),
+) -> ShareDocumentResponse:
+    share_token, db_token = generate_share_token(
+        user_id=token.user.id,
+        document_id=document.id,
+        name=body.name,
+        valid_until=body.valid_until,
+    )
+    session.add(db_token)
+    session.commit()
+    return ShareDocumentResponse(share_token=share_token)
+
+
+@document_router.get("/{document_id}/share_tokens/")
+def list_share_tokens(
+    session: Session = Depends(get_session),
+    document: Document = Depends(get_owned_document_from_url),
+) -> List[DocumentShareTokenResponse]:
+    statement = (
+        select(DocumentShareToken)
+        .where(DocumentShareToken.document_id == document.id)
+        .order_by(desc(DocumentShareToken.valid_until), DocumentShareToken.id)
+    )
+    results = session.exec(statement)
+    return [x.to_response() for x in results]
+
+
+@document_router.delete("/{document_id}/share_tokens/{token_id}/")
+def delete_share_tokens(
+    token_id: uuid.UUID,
+    session: Session = Depends(get_session),
+    document: Document = Depends(get_owned_document_from_url),
+):
+    statement = select(DocumentShareToken).where(
+        DocumentShareToken.document_id == document.id,
+        DocumentShareToken.id == token_id,
+    )
+    token = session.exec(statement).one_or_none()
+    if token is None:
+        raise HTTPException(status_code=404)
+    else:
+        session.delete(token)
+        session.commit()
+        return
